{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 44,
  "lineage": "d118a10f-ab2a-1eef-3999-e04a34f8deb1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ecommerce_eip_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d4575f0be8caa713",
            "arn": "arn:aws:ec2:us-east-1:031844525577:elastic-ip/eipalloc-0d4575f0be8caa713",
            "association_id": "eipassoc-0c104fda55e50baa3",
            "domain": "vpc",
            "id": "eipalloc-0d4575f0be8caa713",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0da06c2d483f46b3f",
            "private_dns": "ip-10-0-0-25.ec2.internal",
            "private_ip": "10.0.0.25",
            "public_dns": "ec2-52-3-77-140.compute-1.amazonaws.com",
            "public_ip": "52.3.77.140",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ecommerce-eip-1"
            },
            "tags_all": {
              "Name": "ecommerce-eip-1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ecommerce_eip_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a1b932dd15bc00d2",
            "arn": "arn:aws:ec2:us-east-1:031844525577:elastic-ip/eipalloc-0a1b932dd15bc00d2",
            "association_id": "eipassoc-0b0c140e6519632a2",
            "domain": "vpc",
            "id": "eipalloc-0a1b932dd15bc00d2",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05daec6f694302d70",
            "private_dns": "ip-10-0-0-61.ec2.internal",
            "private_ip": "10.0.0.61",
            "public_dns": "ec2-44-214-236-179.compute-1.amazonaws.com",
            "public_ip": "44.214.236.179",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ecommerce-eip-2"
            },
            "tags_all": {
              "Name": "ecommerce-eip-2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ecommerce_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031844525577:internet-gateway/igw-04b15a0df3b2d7476",
            "id": "igw-04b15a0df3b2d7476",
            "owner_id": "031844525577",
            "tags": {
              "Name": "ecommerce-igw"
            },
            "tags_all": {
              "Name": "ecommerce-igw"
            },
            "vpc_id": "vpc-08e200466a894d4c0"
          },
          "dependencies": [
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ecommerce_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:031844525577:loadbalancer/app/ecommerce-lb-asg/afb7f423581ce04b",
            "arn_suffix": "app/ecommerce-lb-asg/afb7f423581ce04b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecommerce-lb-asg-479459985.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:031844525577:loadbalancer/app/ecommerce-lb-asg/afb7f423581ce04b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecommerce-lb-asg",
            "preserve_host_header": false,
            "security_groups": [
              "sg-027df0fd2a73adbab"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a423c5e36b3dbe30"
              },
              {
                "subnet_id": "subnet-0a7836841bec034b3"
              }
            ],
            "subnets": [
              "subnet-0a423c5e36b3dbe30",
              "subnet-0a7836841bec034b3"
            ],
            "tags": {
              "Name": "ecommerce-lb"
            },
            "tags_all": {
              "Name": "ecommerce-lb"
            },
            "vpc_id": "vpc-08e200466a894d4c0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.ecommerce_sg_for_elb",
            "aws_subnet.ecommerce_pub_subnet_1",
            "aws_subnet.ecommerce_pub_subnet_2",
            "aws_vpc.ecommerce_vpc",
            "data.aws_ec2_managed_prefix_list.cloudfront"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ecommerce_front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:031844525577:listener/app/ecommerce-lb-asg/afb7f423581ce04b/5ba034f50d213255",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:031844525577:targetgroup/ecommerce-tf-lb-alb-tg/bdf4978d4bed99da",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:031844525577:listener/app/ecommerce-lb-asg/afb7f423581ce04b/5ba034f50d213255",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:031844525577:loadbalancer/app/ecommerce-lb-asg/afb7f423581ce04b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Name": "ecommerce-alb-listener"
            },
            "tags_all": {
              "Name": "ecommerce-alb-listener"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ecommerce_lb",
            "aws_lb_target_group.ecommerce_alb_tg",
            "aws_security_group.ecommerce_sg_for_elb",
            "aws_subnet.ecommerce_pub_subnet_1",
            "aws_subnet.ecommerce_pub_subnet_2",
            "aws_vpc.ecommerce_vpc",
            "data.aws_ec2_managed_prefix_list.cloudfront"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecommerce_alb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:031844525577:targetgroup/ecommerce-tf-lb-alb-tg/bdf4978d4bed99da",
            "arn_suffix": "targetgroup/ecommerce-tf-lb-alb-tg/bdf4978d4bed99da",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:031844525577:targetgroup/ecommerce-tf-lb-alb-tg/bdf4978d4bed99da",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:031844525577:loadbalancer/app/ecommerce-lb-asg/afb7f423581ce04b"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecommerce-tf-lb-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ecommerce-alb-tg"
            },
            "tags_all": {
              "Name": "ecommerce-alb-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08e200466a894d4c0"
          },
          "dependencies": [
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ecommerce_nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d4575f0be8caa713",
            "association_id": "eipassoc-0c104fda55e50baa3",
            "connectivity_type": "public",
            "id": "nat-004da6bed656f8845",
            "network_interface_id": "eni-0da06c2d483f46b3f",
            "private_ip": "10.0.0.25",
            "public_ip": "52.3.77.140",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a423c5e36b3dbe30",
            "tags": {
              "Name": "ecommerce-nat-1"
            },
            "tags_all": {
              "Name": "ecommerce-nat-1"
            }
          },
          "dependencies": [
            "aws_eip.ecommerce_eip_1",
            "aws_subnet.ecommerce_pub_subnet_1",
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ecommerce_nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a1b932dd15bc00d2",
            "association_id": "eipassoc-0b0c140e6519632a2",
            "connectivity_type": "public",
            "id": "nat-0e1b457c4241daa58",
            "network_interface_id": "eni-05daec6f694302d70",
            "private_ip": "10.0.0.61",
            "public_ip": "44.214.236.179",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a7836841bec034b3",
            "tags": {
              "Name": "ecommerce-nat-2"
            },
            "tags_all": {
              "Name": "ecommerce-nat-2"
            }
          },
          "dependencies": [
            "aws_eip.ecommerce_eip_2",
            "aws_subnet.ecommerce_pub_subnet_2",
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ecommerce_rt_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031844525577:route-table/rtb-03b5b3e2a67a21b93",
            "id": "rtb-03b5b3e2a67a21b93",
            "owner_id": "031844525577",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-004da6bed656f8845",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecommerce-rt-private-1"
            },
            "tags_all": {
              "Name": "ecommerce-rt-private-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e200466a894d4c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ecommerce_eip_1",
            "aws_nat_gateway.ecommerce_nat_1",
            "aws_subnet.ecommerce_pub_subnet_1",
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ecommerce_rt_private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031844525577:route-table/rtb-050d145b3de3be916",
            "id": "rtb-050d145b3de3be916",
            "owner_id": "031844525577",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e1b457c4241daa58",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecommerce-rt-private-2"
            },
            "tags_all": {
              "Name": "ecommerce-rt-private-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e200466a894d4c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ecommerce_eip_2",
            "aws_nat_gateway.ecommerce_nat_2",
            "aws_subnet.ecommerce_pub_subnet_2",
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ecommerce_rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031844525577:route-table/rtb-0b7a8f4dd520c7f18",
            "id": "rtb-0b7a8f4dd520c7f18",
            "owner_id": "031844525577",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04b15a0df3b2d7476",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecommerce-rt-public"
            },
            "tags_all": {
              "Name": "ecommerce-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-08e200466a894d4c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ecommerce_gw",
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ecommerce_rta_priv_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b151cfdc2986c92",
            "route_table_id": "rtb-03b5b3e2a67a21b93",
            "subnet_id": "subnet-0abf81f003136261b"
          },
          "dependencies": [
            "aws_eip.ecommerce_eip_1",
            "aws_nat_gateway.ecommerce_nat_1",
            "aws_route_table.ecommerce_rt_private_1",
            "aws_subnet.ecommerce_priv_subnet_1",
            "aws_subnet.ecommerce_pub_subnet_1",
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ecommerce_rta_priv_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015673fe6eace791b",
            "route_table_id": "rtb-050d145b3de3be916",
            "subnet_id": "subnet-0a0cf2ad25428f1d6"
          },
          "dependencies": [
            "aws_eip.ecommerce_eip_2",
            "aws_nat_gateway.ecommerce_nat_2",
            "aws_route_table.ecommerce_rt_private_2",
            "aws_subnet.ecommerce_priv_subnet_2",
            "aws_subnet.ecommerce_pub_subnet_2",
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ecommerce_rta_pub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0adf81da7647fcb4c",
            "route_table_id": "rtb-0b7a8f4dd520c7f18",
            "subnet_id": "subnet-0a423c5e36b3dbe30"
          },
          "dependencies": [
            "aws_internet_gateway.ecommerce_gw",
            "aws_route_table.ecommerce_rt_public",
            "aws_subnet.ecommerce_pub_subnet_1",
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ecommerce_rta_pub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5941e7434437c22",
            "route_table_id": "rtb-0b7a8f4dd520c7f18",
            "subnet_id": "subnet-0a7836841bec034b3"
          },
          "dependencies": [
            "aws_internet_gateway.ecommerce_gw",
            "aws_route_table.ecommerce_rt_public",
            "aws_subnet.ecommerce_pub_subnet_2",
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecommerce_sg_for_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031844525577:security-group/sg-060fe2e8126ad3866",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-060fe2e8126ad3866",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow http request from Load Balancer",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-027df0fd2a73adbab"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecommerce-sg_for_ec2",
            "name_prefix": "",
            "owner_id": "031844525577",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08e200466a894d4c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecommerce_sg_for_elb",
            "aws_vpc.ecommerce_vpc",
            "data.aws_ec2_managed_prefix_list.cloudfront"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecommerce_sg_for_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031844525577:security-group/sg-027df0fd2a73adbab",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-027df0fd2a73adbab",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow http request from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow https request from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ecommerce-sg_for_elb",
            "name_prefix": "",
            "owner_id": "031844525577",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08e200466a894d4c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ecommerce_vpc",
            "data.aws_ec2_managed_prefix_list.cloudfront"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecommerce_priv_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031844525577:subnet/subnet-0abf81f003136261b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0abf81f003136261b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "031844525577",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecommerce-priv-subnet-1"
            },
            "tags_all": {
              "Name": "ecommerce-priv-subnet-1"
            },
            "vpc_id": "vpc-08e200466a894d4c0"
          },
          "dependencies": [
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecommerce_priv_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031844525577:subnet/subnet-0a0cf2ad25428f1d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0cf2ad25428f1d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "031844525577",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecommerce-priv-subnet-2"
            },
            "tags_all": {
              "Name": "ecommerce-priv-subnet-2"
            },
            "vpc_id": "vpc-08e200466a894d4c0"
          },
          "dependencies": [
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecommerce_pub_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031844525577:subnet/subnet-0a423c5e36b3dbe30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a423c5e36b3dbe30",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "031844525577",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecommerce-pub-subnet-1"
            },
            "tags_all": {
              "Name": "ecommerce-pub-subnet-1"
            },
            "vpc_id": "vpc-08e200466a894d4c0"
          },
          "dependencies": [
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecommerce_pub_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031844525577:subnet/subnet-0a7836841bec034b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.32/27",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7836841bec034b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "031844525577",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecommerce-pub-subnet-2"
            },
            "tags_all": {
              "Name": "ecommerce-pub-subnet-2"
            },
            "vpc_id": "vpc-08e200466a894d4c0"
          },
          "dependencies": [
            "aws_vpc.ecommerce_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ecommerce_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:031844525577:vpc/vpc-08e200466a894d4c0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/23",
            "default_network_acl_id": "acl-0ddad9fe9def28f3c",
            "default_route_table_id": "rtb-01d0cfb1f9f9835de",
            "default_security_group_id": "sg-08cbb6bd40a763a26",
            "dhcp_options_id": "dopt-08d6179747833cff4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08e200466a894d4c0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01d0cfb1f9f9835de",
            "owner_id": "031844525577",
            "tags": {
              "Name": "ecommerce-vpc"
            },
            "tags_all": {
              "Name": "ecommerce-vpc"
            }
          }
        }
      ]
    }
  ]
}